--- a/view/frontend/templates/applepay/shortcut.phtml
+++ b/view/frontend/templates/applepay/shortcut.phtml
@@ -18,6 +18,11 @@ try {
 $config = [
     'Adyen_Payment/js/applepay/button' => [
         'id' => $id,
+        'quoteId' => $block->getQuoteId(),
+        'actionSuccess' => $block->getActionSuccess(),
+        'grandTotalAmount' => $block->getAmount(),
+        'isLoggedIn' => $block->isCustomerLoggedIn(),
+        'storeCode' => $block->getStorecode()
     ]
 ];
 ?>
