--- a/view/frontend/templates/applepay/shortcut.phtml
+++ b/view/frontend/templates/applepay/shortcut.phtml
@@ -22,7 +22,8 @@ $config = [
         'actionSuccess' => $block->getActionSuccess(),
         'grandTotalAmount' => $block->getAmount(),
         'isLoggedIn' => $block->isCustomerLoggedIn(),
-        'storeCode' => $block->getStorecode()
+        'storeCode' => $block->getStorecode(),
+        'countryCode' => $block->getDefaultCountryCode()
     ]
 ];
 ?>
