--- a/view/frontend/templates/googlepay/shortcut.phtml
+++ b/view/frontend/templates/googlepay/shortcut.phtml
@@ -34,6 +34,6 @@ $config = [
     ]
 ];
 ?>
-<div id="<?= $id ?>"
+<div class="google-pay-button-card" id="<?= $id ?>"
      data-mage-init="<?= $block->escapeHtmlAttr(json_encode($config)) ?>">
 </div>
