--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -175,3 +175,50 @@
 #googlePay.disabled > * {
     pointer-events: none;
 }
+
+.apple-pay-button-with-text {
+    --apple-pay-scale: 1.5625; /* (height / 32) */
+    display: inline-flex;
+    justify-content: center;
+    font-size: 12px;
+    border-radius: 5px;
+    padding: 0px;
+    box-sizing: border-box;
+    /*min-width: 200px;*/
+    width: 100%;
+    min-height: 32px;
+    max-height: 64px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.apple-pay-button-black-with-text {
+    background-color: black;
+    color: white;
+}
+
+.apple-pay-button-with-text.apple-pay-button-black-with-text > .logo {
+    background-image: -webkit-named-image(apple-pay-logo-white);
+    background-color: black;
+}
+
+.apple-pay-button-with-text > .logo {
+    width: calc(35px * var(--apple-pay-scale));
+    height: 100%;
+    background-size: 100% 60%;
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    margin: 0;
+    border: none;
+    min-width: 0px; /* override magento min-width */
+    min-height: 42px; /* override magento min-height */
+}
+
+.adyen-checkout__applepay__button{
+    height:40px;
+    width:240px
+}
+
+.adyen-checkout__dropin .adyen-checkout__applepay__button{
+    width:100%
+}
