apple pay configuration

--- a/view/frontend/templates/googlepay/shortcut.phtml
+++ b/view/frontend/templates/googlepay/shortcut.phtml
@@ -28,7 +28,7 @@ $config = [
         'merchantAccount' => $block->getMerchantAccount(),
         'format' => $block->getFormat(),
         'locale' => $block->getLocale(),
-        'merchantIdentifier' => '',
+        'merchantIdentifier' => $block->getMerchantIdentifier(),
         'originkey' => $block->getOriginKey(),
         'checkoutenv' => $block->getCheckoutEnvironment()
     ]
